force-app/main/default/objects/Account/fields/AccountingEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountingEmail__c</fullName>
    <label>Электронная почта бухгалтерии</label>
    <type>Email</type>
</CustomField>