force-app/main/default/objects/Account/fields/AccountingPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountingPhone__c</fullName>
    <label>Телефон бухгалтерии</label>
    <type>Phone</type>
</CustomField>