force-app/main/default/objects/Account/fields/AccountOffer__c.field-meta.xml
<CustomField>
    <fullName>AccountOffer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Оферта</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>