force-app/main/default/objects/Account/fields/AccountProfile__c.field-meta.xml
<CustomField>
    <fullName>AccountProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Организация Анкеты</label>
    <referenceTo>AccountProfile__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>