force-app/main/default/objects/Account/fields/BankAcc__c.field-meta.xml
<CustomField>
    <fullName>BankAcc__c</fullName>
    <label>Расчетный счет</label>
    <length>255</length>
    <type>Text</type>
</CustomField>