force-app/main/default/objects/Account/fields/BankCorr__c.field-meta.xml
<CustomField>
    <fullName>BankCorr__c</fullName>
    <label>Кор. счет</label>
    <length>20</length>
    <type>Text</type>
</CustomField>