force-app/main/default/objects/Account/fields/BIKBank__c.field-meta.xml
<CustomField>
    <fullName>BIKBank__c</fullName>
    <label>БИК банка</label>
    <length>255</length>
    <type>Text</type>
</CustomField>