force-app/main/default/objects/Account/fields/CorrAddress__c.field-meta.xml
<CustomField>
    <fullName>CorrAddress__c</fullName>
    <label>Адрес</label>
    <length>255</length>
    <type>Text</type>
</CustomField>