force-app/main/default/objects/Account/fields/CorrCity__c.field-meta.xml
<CustomField>
    <fullName>CorrCity__c</fullName>
    <label>Город</label>
    <length>255</length>
    <type>Text</type>
</CustomField>