force-app/main/default/objects/Account/fields/CorrPostCode__c.field-meta.xml
<CustomField>
    <fullName>CorrPostCode__c</fullName>
    <label>Индекс</label>
    <length>255</length>
    <type>Text</type>
</CustomField>