force-app/main/default/objects/Account/fields/INN__c.field-meta.xml
<CustomField>
    <fullName>INN__c</fullName>
    <label>ИНН</label>
    <length>12</length>
    <type>Text</type>
</CustomField>