force-app/main/default/objects/Account/fields/KPP__c.field-meta.xml
<CustomField>
    <fullName>KPP__c</fullName>
    <label>КПП</label>
    <length>9</length>
    <type>Text</type>
</CustomField>