force-app/main/default/objects/Account/fields/NameSignAcc__c.field-meta.xml
<CustomField>
    <fullName>NameSignAcc__c</fullName>
    <label>Имя подписанта в именительном падеже</label>
    <length>255</length>
    <type>Text</type>
</CustomField>