force-app/main/default/objects/Account/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <displayFormat>AO-{00000000}</displayFormat>
    <label>Номер Оферты</label>
    <type>AutoNumber</type>
</CustomField>