force-app/main/default/objects/Account/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>Индекс</label>
    <length>255</length>
    <type>Text</type>
</CustomField>