force-app/main/default/objects/Account/fields/TitleSignAcc__c.field-meta.xml
<CustomField>
    <fullName>TitleSignAcc__c</fullName>
    <label>Должность подписанта</label>
    <length>255</length>
    <type>Text</type>
</CustomField>